# photo-scanner-rs

./: .env.dist  .gitignore  Cargo.toml  README.md  thumbnails-par.sh
src/: main.rs
src/domain/: descriptions.rs  embeddings.rs  file_utils.rs  mod.rs  models.rs  ports.rs
src/outbound/: exif.rs  image_provider.rs  mod.rs  openai.rs  qdrant.rs  test_mocks.rs  xmp.rs
