[package]
name = "photo-scanner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-openai = "0.25.0"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
xmp_toolkit = { version = "1.9.1", features = ["chrono"] }
little_exif = "0.6.0"
image = { version = "0.25.4", features = ["rayon"] }
futures = "0.3.31"
indicatif = "0.17.8"
tracing-appender = "0.2.3"
qdrant-client = "1.12.1"
serde_json = "1.0.132"
dotenv = "0.15.0"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.13.0"
