[package]
name = "photo-scanner"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93" # Error handling library
async-openai = "0.25.0" # Asynchronous OpenAI API client
base64 = "0.22.1" # Base64 encoding and decoding library
tracing = "0.1.40" # Event tracing for your application
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
] } # Trace events to output streams
tokio = { version = "1.40.1", features = [
    "full",
] } # Asynchronous runtime for Rust
async-trait = "0.1.83" # Trait for async functions in Rust
xmp_toolkit = { version = "1.9.1", features = [
    "chrono",
] } # Library for parsing and manipulating XMP metadata
image = { version = "0.25.5", features = ["rayon"] } # Image processing library
futures = "0.3.31" # Utilities for working with asynchronous operations
indicatif = "0.17.8" # Progress bar library
tracing-appender = "0.2.3" # Trace events to output streams
qdrant-client = "1.12.1" # Client for Qdrant, a vector similarity search engine
serde_json = "1.0.132" # JSON serialization and deserialization library
dotenv = "0.15.0" # Loads environment variables from .env file
regex = "1.11.1" # Regular expression library
chrono = "0.4.38"
[dev-dependencies]
rand = "0.8.5"
tempfile = "3.13.0"
